# haskell-rand-vars

./: .gitignore  LICENSE  README.md  Rand.cabal
Control/Monad/: Random.hs
doc/html/rand-vars/: Rand.html  doc-index.html  index-frames.html  index.html  mini_Rand.html  rand-vars.haddock
src/: Rand.cabal  Rand.hs
